--- a/public/about.html
+++ b/public/about.html
@@ -132,7 +132,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Hi my names Jenny and I’m a yoga teacher based in Glasgow, I teach at Glasgow University on wednesdays.</p>
+<p>Hi my names Jenny and I’m a yoga teacher based in Glasgow.</p>
 
 
 
