--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@ ul.task-list li input[type="checkbox"] {
         
     </div>
 <!-- main -->
-<main class="content" id="quarto-document-content">
+<main class="content page-columns page-full" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -132,9 +132,16 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius, lectus sollicitudin ullamcorper auctor, leo orci semper ligula, sed accumsan velit arcu id est. Nam tellus augue, ullamcorper quis nulla a, blandit posuere nulla. Suspendisse egestas risus dictum diam finibus volutpat. Pellentesque non egestas diam. Aliquam vitae aliquet libero, vel dignissim tortor. Pellentesque luctus mauris a leo dapibus tristique. Phasellus non commodo risus. Vivamus nec velit lorem. Proin facilisis auctor felis ultrices tincidunt. Mauris auctor feugiat metus, quis ultricies sem placerat a. Quisque in nulla id ligula aliquam tempus. Aenean tincidunt lectus felis, porta placerat augue sagittis lobortis.</p>
-<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas dui lectus, porttitor eget lacus vel, dictum rhoncus nibh. Maecenas sed ultrices nulla. Duis vestibulum ornare dolor, cursus dignissim nunc consectetur sit amet. Cras nisi risus, cursus sollicitudin nisi pharetra, iaculis suscipit nisl. Etiam nec arcu ac magna ultricies efficitur non ac odio. Suspendisse dignissim scelerisque accumsan. Donec ac tortor nec dui consectetur lobortis sed vel eros. Morbi egestas scelerisque enim id semper. Suspendisse tristique mauris magna, id aliquam ipsum commodo vel. Cras orci turpis, dignissim non iaculis sit amet, venenatis commodo eros. Ut vel neque diam. Suspendisse non porta est. Nam consequat lectus quis ex maximus lacinia et nec urna. Aenean bibendum diam at nibh aliquet luctus.</p>
-<p>Sed porttitor, ligula sed elementum volutpat, nulla quam viverra lacus, et sollicitudin massa mi ac ipsum. Ut blandit egestas metus id gravida. Vivamus eleifend, neque at varius hendrerit, velit dolor tempus nisl, lobortis commodo ex dui id libero. Praesent eget nunc justo. Nullam neque nunc, tincidunt ut dui at, hendrerit malesuada dui. Ut scelerisque tempor lacus vel lacinia. Nunc varius, lectus vitae rhoncus auctor, tellus ex iaculis metus, ut consequat ipsum enim sed ante. Maecenas nibh turpis, ornare vel elit id, rhoncus convallis elit. Etiam a risus tellus. Cras pulvinar gravida hendrerit. Sed pulvinar urna arcu, in consequat urna pretium ac. Vestibulum at ultricies arcu. Suspendisse tempus condimentum turpis eget imperdiet. Morbi vitae ex convallis augue gravida finibus. Nullam in tempus risus.</p>
+<p>Hey my name’s Jenny and I’m currently based in Glasgow. I’m an Ambitious and creative yoga teacher with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. Seeking to thrive professionally in the Glasgow yoga community through teaching Vinyasa, Yin and Hatha classes, host specialized workshops and utilize my strong level of knowledge and prior experience in the&nbsp;yoga&nbsp;industry.</p>
+<p>Embarking on a multi-style YTTC training in India was a hugely insightful experience. The course covered the philosophy and history of yoga, anatomy of the human body, and most importantly, ways in which to confidently teach Hatha and Vinyasa style yoga classes for beginner and intermediate levels. The course was heavily focused on the traditional aspects of yoga, particularly surrounding Sanskrit translation and the philosophy&nbsp;of&nbsp;yoga.</p>
+<div class="page-columns page-full">
+<div class="quarto-figure quarto-figure-center page-columns page-full">
+<figure class="figure page-columns page-full">
+<p class="page-columns page-full"><img src="main.jpg" class="img-fluid figure-img column-screen"></p>
+<figcaption>A full screen image</figcaption>
+</figure>
+</div>
+</div>
 
 
 
