--- a/public/practice.html
+++ b/public/practice.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Yogi Jenny</title>
+<title>Yogi Jenny - Practice with Me</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -89,11 +89,11 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html" aria-current="page"> 
+    <a class="nav-link" href="./index.html"> 
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./practice.html"> 
+    <a class="nav-link active" href="./practice.html" aria-current="page"> 
 <span class="menu-text">Practice with Me</span></a>
   </li>  
 </ul>
@@ -115,7 +115,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Yogi Jenny</h1>
+<h1 class="title">Practice with Me</h1>
 </div>
 
 
@@ -132,23 +132,6 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Hey my name’s Jenny and I’m currently based in Glasgow. I’m an Ambitious and creative yoga teacher with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. Seeking to thrive professionally in the Glasgow yoga community through teaching Vinyasa, Yin and Hatha classes, host specialized workshops and utilize my strong level of knowledge and prior experience in the&nbsp;yoga&nbsp;industry.</p>
-<p><br></p>
-<div>
-
-</div>
-<div class="quarto-layout-panel" data-layout-ncol="2">
-<div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><img src=".\assets/main.jpg" class="img-fluid"></p>
-</div>
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><img src=".\assets/updog.jpg" class="img-fluid"></p>
-</div>
-</div>
-</div>
-<p>Embarking on a multi-style YTTC training in India was a hugely insightful experience. The course covered the philosophy and history of yoga, anatomy of the human body, and most importantly, ways in which to confidently teach Hatha and Vinyasa style yoga classes for beginner and intermediate levels. The course was heavily focused on the traditional aspects of yoga, particularly surrounding Sanskrit translation and the philosophy&nbsp;of&nbsp;yoga.</p>
-<p><br></p>
 
 
 
