--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Yogi Jenny - Practice with Me</title>
+<title>Yogi Jenny - Get in touch</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -93,11 +93,11 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./practice.html" aria-current="page"> 
+    <a class="nav-link" href="./practice.html"> 
 <span class="menu-text">Practice with Me</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./contact.html"> 
+    <a class="nav-link active" href="./contact.html" aria-current="page"> 
 <span class="menu-text">Get in touch</span></a>
   </li>  
 </ul>
@@ -119,7 +119,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Practice with Me</h1>
+<h1 class="title">Get in touch</h1>
 </div>
 
 
@@ -136,9 +136,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>I currently teach at the Glasgow University Sport’s center.</p>
-<p>(Add more here)</p>
-<p><img src="assets/about.jpg" class="img-fluid"></p>
+<p>For business enquirees and anything else contact me at: (add filter for email address to stop bots)</p>
+<p><img src=".\assets/crow.jpg" class="img-fluid"></p>
 
 
 
