--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./practice.html"> 
 <span class="menu-text">Practice with Me</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./contact.html"> 
+<span class="menu-text">Get in touch</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
           <div class="quarto-navbar-tools">
