--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Hey my name’s Jenny and I’m currently based in Glasgow. I’m an Ambitious and creative yoga teacher with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. Seeking to thrive professionally in the Glasgow yoga community through teaching Vinyasa, Yin and Hatha classes, host specialized workshops and utilize my strong level of knowledge and prior experience in the&nbsp;yoga&nbsp;industry.</p>
+<p>Based in Glasgow, I am a Freelance Yoga Instructor with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. I teach a variety of styles of yoga, including Energising and Slow Vinyasa, Power Yoga and Restorative Yin.</p>
 <p><br></p>
 <div>
 
