--- a/public/practice.html
+++ b/public/practice.html
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>I currently teach at the Glasgow University Sport’s center.</p>
+<p>I currently teach at Glasgow University Sports Association in the Stevenson Building and cover yoga classes at Lift Gyms, Edinburgh.</p>
 <p>(Add more here)</p>
 <p><img src="assets/about.jpg" class="img-fluid"></p>
 
