--- a/public/contact.html
+++ b/public/contact.html
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>For business enquirees and anything else contact me at: (add filter for email address to stop bots)</p>
+<p>For business enquirees and anything else contact me at:</p>
 <p><img src=".\assets/crow.jpg" class="img-fluid"></p>
 
 
