--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./contact.html"> 
-<span class="menu-text">Get in touch</span></a>
+<span class="menu-text">Contact me</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -151,7 +151,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>Embarking on a multi-style YTTC training in India was a hugely insightful experience. The course covered the philosophy and history of yoga, anatomy of the human body, and most importantly, ways in which to confidently teach Hatha and Vinyasa style yoga classes for beginner and intermediate levels. The course was heavily focused on the traditional aspects of yoga, particularly surrounding Sanskrit translation and the philosophy&nbsp;of&nbsp;yoga.</p>
+<p>In October 2023, I completed my 200-hour multi-style YTTC training in Goa, India, at the amazing Drishti International Yoga School, with my teachers Manav and Samita. In order to honour the beauty of the ancient practice of Yoga within my classes, I am conscious to intergrate spiritual elements within the physical practice.</p>
 <p><br></p>
 
 
