--- a/public/practice.html
+++ b/public/practice.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./contact.html"> 
-<span class="menu-text">Get in touch</span></a>
+<span class="menu-text">Contact me</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
