--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Yogi Jenny - Get in touch</title>
+<title>Yogi Jenny - Contact me</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link active" href="./contact.html" aria-current="page"> 
-<span class="menu-text">Get in touch</span></a>
+<span class="menu-text">Contact me</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -119,7 +119,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Get in touch</h1>
+<h1 class="title">Contact me</h1>
 </div>
 
 
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>For business enquirees and anything else contact me at:</p>
+<p>Contact me:</p>
 <p><img src=".\assets/crow.jpg" class="img-fluid"></p>
 
 
